--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -53,7 +53,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header col-1 col-sm-2 col-md-2 col-lg-2">
-            <a class="navbar-brand" href="/">LifeMap</a>
+            <a class="navbar-brand flexed-nav-item" href="/">LifeMap</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,11 +80,13 @@
     </div><!-- /.container-fluid -->
 </nav>
 
-<!--NAV BAR FRAGMENT-->
-<nav th:fragment="navbar" id="intro-search-container">
-    <div id="intro-div">
-        <a class="navbar-brand" href="/"><h2>LifeMap</h2></a>
+<div th:fragment="nosearch" class="intro-search-container">
+    <div class="intro-div">
+        <a class="navbar-brand flexed-nav-item" href="/"><h2>LifeMap</h2></a>
         <p>A minimalist, at-a-glance view of life in another city.</p>
+    </div>
+
+    <div class="disappear">
         <ul class="nav navbar-nav">
             <li sec:authorize="!isAuthenticated()"><a href="/register">Register <span class="sr-only">(current)</span></a></li>
             <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
@@ -96,7 +98,33 @@
             </li>
         </ul>
     </div>
-</nav>
+</div>
+
+<div th:fragment="fullbar" class="intro-search-container">
+    <div class="intro-div">
+        <a class="navbar-brand flexed-nav-item" href="/"><h2>LifeMap</h2></a>
+        <p>A minimalist, at-a-glance view of life in another city.</p>
+    </div>
+
+    <div class="disappear">
+        <ul class="nav navbar-nav">
+            <li sec:authorize="!isAuthenticated()"><a href="/register">Register <span class="sr-only">(current)</span></a></li>
+            <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
+            <li sec:authorize="isAuthenticated()"><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
+            <li sec:authorize="isAuthenticated()">
+                <form th:action="@{/logout}" th:method="post">
+                    <button class="btn btn-link" >Logout</button>
+                </form>
+            </li>
+        </ul>
+    </div>
+
+    <div id="search-wrapper" class="form-group">
+        <input type="text" id="city-input" class="form-control flexed-search-item" placeholder="Enter Address" />
+        <button id="get-info" type="submit" class="btn btn-default go flexed-search-item">Go</button>
+    </div>
+</div>
+
 
 <!--FOOTER FRAGMENT-->
 <footer th:fragment="footer">
