--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -10,30 +10,7 @@
       <div id="map"></div>
     </div>
 
-    <div id="intro-search-container">
-        <div id="intro-div">
-          <a class="navbar-brand" href="/"><h2>LifeMap</h2></a>
-          <p>A minimalist, at-a-glance view of life in another city.</p>
-        </div>
-
-        <div class="disappear">
-            <ul class="nav navbar-nav">
-              <li sec:authorize="!isAuthenticated()"><a href="/register">Register <span class="sr-only">(current)</span></a></li>
-              <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
-              <li sec:authorize="isAuthenticated()"><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
-              <li sec:authorize="isAuthenticated()">
-                <form th:action="@{/logout}" th:method="post">
-                  <button class="btn btn-link" >Logout</button>
-                </form>
-              </li>
-            </ul>
-        </div>
-
-      <div id="search-wrapper" class="form-group">
-        <input type="text" id="city-input" class="form-control" placeholder="Enter Address" />
-        <button id="get-info" type="submit" class="btn btn-default go">Go</button>
-      </div>
-    </div>
+    <div th:replace="fragments :: fullbar"></div>
 
     <div id="icons-info-container">
       <div id="icon-container"></div>
