--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -64,7 +64,7 @@
                 <li sec:authorize="isAuthenticated()"><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
                 <li sec:authorize="isAuthenticated()">
                     <form th:action="@{/logout}" th:method="post">
-                        <button class="btn btn-link" >Logout</button>
+                        <button class="btn btn-link">Logout</button>
                     </form>
                 </li>
             </ul>
@@ -93,7 +93,7 @@
             <li sec:authorize="isAuthenticated()"><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
             <li sec:authorize="isAuthenticated()">
                 <form th:action="@{/logout}" th:method="post">
-                    <button class="btn btn-link" >Logout</button>
+                    <button class="btn btn-link" id="logout-button">Logout</button>
                 </form>
             </li>
         </ul>
@@ -113,7 +113,7 @@
             <li sec:authorize="isAuthenticated()"><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
             <li sec:authorize="isAuthenticated()">
                 <form th:action="@{/logout}" th:method="post">
-                    <button class="btn btn-link" >Logout</button>
+                    <button class="btn btn-link" id="logout-button">Logout</button>
                 </form>
             </li>
         </ul>
