--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -6,23 +6,17 @@
 
 <div class="container-fluid">
     <form id="formFlds" class="moveFldsDiv" th:action="@{/user/register}" th:method="POST" th:object="${user}">
-        <div id="regHead">Register Here</div>
+        <div id="regHead">Map Your Life!</div>
         <div class="form-group group-to-right">
-            <label id="usernameLbl" class="inputLabels" for="username">Username</label>
-            <!--<input id="username" class="form-control" th:field="*{username}" />-->
-            <input id="username" class="form-control regUsePwr" autofocus="true" th:field="*{username}"/>
+            <input id="username" placeholder="Username" class="form-control regUsePwr" autofocus="true" th:field="*{username}"/>
             <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
         </div>
         <div class="form-group group-to-right">
-            <label id="emailLbl" class="inputLabels" for="email">Email</label>
-            <!--<input id="email" class="form-control" th:field="*{email}" />-->
-            <input id="email" class="form-control regEmail" th:field="*{email}"/>
+            <input id="email" placeholder="E-mail" class="form-control regEmail" th:field="*{email}"/>
             <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
         </div>
         <div class="form-group group-to-right">
-            <label id="passwordLbl" class="inputLabels" for="password">Password</label>
-            <!--<input id="password" type="password" class="form-control" th:field="*{password}" />-->
-            <input id="password" type="password" class="form-control regUsePwr" th:field="*{password}"/>
+            <input id="password" type="password" placeholder="Password" class="form-control regUsePwr" th:field="*{password}"/>
             <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
         </div>
         <input class="btn btn-lg btn-primary regBtn" id="btnSubmit" type="submit"/>
