--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:replace="fragments :: head(title)" />
 <body>
-<nav th:replace="fragments :: navbar" />
-<div class="container" id="content-wrap">
+<nav th:replace="fragments :: navbarSearch" />
+<div class="container-fluid" id="profile-wrap">
   <div id="profile-tag">
     Profile
   </div>
-  <div id="moveAllFlds">
+  <div class="profile-info-container">
     <div>
         <h4 class="label-update" >Update Your Credentials</h4>
     </div>
@@ -36,7 +36,7 @@
     </div>
     </div>
     <div id="space-line"></div>
-    <div id="user-options">
+    <div class="profile-info-container">
       <div>
       <h4 class="label-update ">Additional Search Options</h4>
       </div>
