--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -3,6 +3,7 @@
 <head th:replace="fragments :: head(title)" />
 <body>
 <nav th:replace="fragments :: navbarSearch" />
+<nav th:replace="fragments :: nosearch" />
 <div class="container-fluid" id="profile-wrap">
   <div id="profile-tag">
     Profile
